# major_system

./: .gitignore  .gitlab-ci.yml  README.md  TODO.md  major_system.py  pyproject.toml  setup.py  test_major_system.py
major_system/: major_system.py  test_major_system.py
